[package]
name = "cache-this-proc-macro"
version = "0.1.0"
edition = "2021"
authors = ["Kai Frerich"]
description = "Macro for simple caching of expression using the file system"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
