[package]
name = "cache-this-proc-macro"
version = "0.1.2"
edition = "2021"
authors = ["Kai Frerich"]
description = "Proc macro implementation for simple caching of expression using the file system"
readme = "README.md"
homepage = "https://github.com/DerMagischeBier/cache-this"
license = "MIT"
repository = "https://github.com/DerMagischeBier/cache-this"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
